@@ -1,3 +1,7 @@
+2007-02-09  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/mio_tls.c(c): working on virtual host support
+
 2007-02-07  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.c: Checking id-on-xmppAddr when using GnuTLS now
